small tweaks to percents dividing by zero

--- a/player.html
+++ b/player.html
@@ -87,7 +87,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat" onclick="submitEdits()">Agree</a>
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat" onclick="submitEdits()">Save</a>
             </div>
         </div>
 
