--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 </head>
 
 <body>
+    <h1 style="margin-top: 1%; margin-bottom: 0%">MAPPC Leaderboard</h1>
+    <h6 style="margin-top: 0">Top Players Sorted by Level and Correctly Solved Problems</h6>
+    <br>
     <div class="cardWrapper">
         <div class="innerCard">
-            <div class="row" style="width: 100%">
+            <div class="row" style="width: 100%;">
                 <ul class="tabs">
                     <li class="tab col s3"><a href="#test1">A Level</a></li>
                     <li class="tab col s3"><a href="#test2">B Level</a></li>
